feat: retning for brukeropplevelse

--- a/folk/index.html
+++ b/folk/index.html
@@ -41,9 +41,9 @@
               vi godt i endringene – sammen.​
             </p>
             <div>
-              <p style="margin-bottom: 0.75rem">
-                <strong>Retning for Team treffer på PITs ambisjon:</strong>
-              </p>
+              <h2 style="font-size: 1.3rem; margin-bottom: 0.75rem">
+                Retning for Team treffer på PITs ambisjon:
+              </h2>
               <p>
                 Vi er teknologer med hjerte for politiets samfunnsoppdrag.
                 Nysgjerrighet og tverrfaglighet er vår nøkkel til suksess. Vi er
