fix: lenker til retninger på oversiktssiden

--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
         <section style="display: grid; gap: 2rem">
           <p>
             Vi ønsker å levere tjenester hvor
-            <strong>BRUKEROPPLEVELSEN</strong> bidrar til at politiet oppfattes
-            som
+            <strong><a href="/brukeropplevelse">BRUKEROPPLEVELSEN</a></strong>
+            bidrar til at politiet oppfattes som
           </p>
           <div class="section-1-text-cols-container">
             <p>
@@ -249,7 +249,10 @@
       <section class="section-3">
         <tr-box style="position: relative; padding-bottom: 12rem">
           <div style="display: grid; gap: 2rem">
-            <p>Vi sikrer at vår <strong>TEKNOLOGI</strong> er</p>
+            <p>
+              Vi sikrer at vår
+              <strong><a href="/teknologi">TEKNOLOGI</a></strong> er
+            </p>
             <ul>
               <li>løst koblet</li>
               <li>datadrevet</li>
@@ -280,7 +283,10 @@
         "
       >
         <tr-box style="display: grid; gap: 2rem; padding-bottom: 10rem">
-          <p>Du og jeg er <strong>FOLK</strong> i PIT. Sammen skal vi</p>
+          <p>
+            Du og jeg er <strong><a href="/folk">FOLK</a></strong> i PIT. Sammen
+            skal vi
+          </p>
           <div style="display: flex; flex-wrap: wrap; gap: 3rem">
             <div>
               <ul>
