fix: fjernet teknologi del fra introtekst til folk

--- a/folk/index.html
+++ b/folk/index.html
@@ -32,26 +32,14 @@
             <p>
               Retning for folk beskriver hvilke forventninger vi har til
               hverandre, og hvordan hver enkelt bidrar til kulturen vi ønsker
-              oss.​
+              oss.
             </p>
             <p>
               Samfunnet er i stadig bevegelse. Det krever at vi tåler å stå i
               kontinuerlig endring, både i nye metoder og måter for samarbeid.
               Kulturen vår skal bidra til å bygge robusthet og trygghet. Da står
-              vi godt i endringene – sammen.​
+              vi godt i endringene - sammen.
             </p>
-            <div>
-              <h2 style="font-size: 1.3rem; margin-bottom: 0.75rem">
-                Retning for Team treffer på PITs ambisjon:
-              </h2>
-              <p>
-                Vi er teknologer med hjerte for politiets samfunnsoppdrag.
-                Nysgjerrighet og tverrfaglighet er vår nøkkel til suksess. Vi er
-                kompetente og engasjerte medarbeidere, som jobber i tverrfaglige
-                team uten siloer. Vi tar initiativ, eksperimenterer og er stolte
-                av kvaliteten i det vi gjør.
-              </p>
-            </div>
           </div>
         </tr-retning-header>
         <tr-prinsipper>
