--- a/folk/index.html
+++ b/folk/index.html
@@ -27,8 +27,8 @@
     <tr-fill-content>
       <main>
         <tr-retning-header>
-          <h1 slot="title">Retning for Folk</h1>
-          <div slot="content" data-inner-only>
+          <tr-retning-header-content>
+            <h1>Retning for Folk</h1>
             <p>
               Retning for folk beskriver hvilke forventninger vi har til
               hverandre, og hvordan hver enkelt bidrar til kulturen vi ønsker
@@ -40,7 +40,8 @@
               Kulturen vår skal bidra til å bygge robusthet og trygghet. Da står
               vi godt i endringene - sammen.
             </p>
-          </div>
+          </tr-retning-header-content>
+          <tr-retning-header-image></tr-retning-header-image>
         </tr-retning-header>
         <tr-prinsipper>
           <h2>Prinsipper vi følger</h2>
