--- a/team/index.html
+++ b/team/index.html
@@ -27,8 +27,8 @@
     <tr-fill-content>
       <main>
         <tr-retning-header>
-          <h1 slot="title">Retning for Team</h1>
-          <div slot="content" data-inner-only>
+          <tr-retning-header-content>
+            <h1>Retning for Team</h1>
             <p>
               Retning for team består av 6 viktige prinsipper. Alle prinsippene
               har som utgangspunkt i at personer med ulik kompetanse må
@@ -52,7 +52,8 @@
                 </li>
               </ul>
             </div>
-          </div>
+          </tr-retning-header-content>
+          <tr-retning-header-image></tr-retning-header-image>
         </tr-retning-header>
         <tr-prinsipper>
           <h2>Prinsipper vi følger</h2>
