--- a/teknologi/index.html
+++ b/teknologi/index.html
@@ -27,15 +27,16 @@
     <tr-fill-content>
       <main>
         <tr-retning-header>
-          <h1 slot="title">Retning for Teknologi</h1>
-          <div slot="content" data-inner-only>
+          <tr-retning-header-content>
+            <h1>Retning for Teknologi</h1>
             <p>
               PIT skal utvikle fremtidsrettede IT-tjenester i samarbeid med
               brukerne. PIT skal ta et helhetlig ansvar for utvikling og
               strategisk styring av teknologiutviklingen i politietaten for å
               styrke politiets løsning av samfunnsoppdraget.
             </p>
-          </div>
+          </tr-retning-header-content>
+          <tr-retning-header-image></tr-retning-header-image>
         </tr-retning-header>
         <tr-prinsipper>
           <h2>Prinsipper vi følger</h2>
