fix: eget innhold i verktøykassen for retning folk

--- a/folk/index.html
+++ b/folk/index.html
@@ -14,7 +14,7 @@
     />
 
     <link href="/css/common.css" rel="stylesheet" />
-    <link href="/css/subpage.css" rel="stylesheet" />
+    <link href="/css/verktoykasse.css" rel="stylesheet" />
     <link href="/css/retning.css" rel="stylesheet" />
     <script type="module" src="/components/common.js"></script>
     <script type="module" src="/components/header.js"></script>
@@ -181,7 +181,23 @@
         </tr-prinsipper>
       </main>
     </tr-fill-content>
-    <tr-verktoykasse></tr-verktoykasse>
+    <tr-verktoykasse>
+      <tr-verktoykasse-content>
+        <tr-verktoykasse-header></tr-verktoykasse-header>
+        <tr-verktoykasse-body>
+          <ul>
+            <li>Medarbeidersamtale (inkl. 1:1)</li>
+            <li>Introduksjons- og nyansattdager (refleksjoner og oppgaver)</li>
+            <li>Helsesjekk</li>
+            <li>Tiltak etter medarbeiderundersøkelser</li>
+            <li>
+              I seksjoner og avdelinger som et ledd i kontinuerlig forbedring i
+              arbeidsmiljøet
+            </li>
+          </ul>
+        </tr-verktoykasse-body>
+      </tr-verktoykasse-content>
+    </tr-verktoykasse>
     <tr-footer></tr-footer>
   </body>
 </html>
