--- a/team/index.html
+++ b/team/index.html
@@ -14,7 +14,7 @@
     />
 
     <link href="/css/common.css" rel="stylesheet" />
-    <link href="/css/subpage.css" rel="stylesheet" />
+    <link href="/css/verktoykasse.css" rel="stylesheet" />
     <link href="/css/retning.css" rel="stylesheet" />
     <script type="module" src="/components/common.js"></script>
     <script type="module" src="/components/header.js"></script>
@@ -96,7 +96,7 @@
             <tr-prinsipp>
               <tr-prinsipp-bilde>
                 <img src="/images/analyse_mikroskop.svg" alt="Mikroskop" />
-                <h3>Vi lærer og ekserimenterer</h3>
+                <h3>Vi lærer og eksperimenterer</h3>
               </tr-prinsipp-bilde>
               <tr-prinsipp-innhold>
                 <p style="margin-bottom: 1rem">
@@ -268,7 +268,12 @@
         </tr-prinsipper>
       </main>
     </tr-fill-content>
-    <tr-verktoykasse></tr-verktoykasse>
+    <tr-verktoykasse>
+      <tr-verktoykasse-content>
+        <tr-verktoykasse-header></tr-verktoykasse-header>
+        <tr-verktoykasse-body></tr-verktoykasse-body>
+      </tr-verktoykasse-content>
+    </tr-verktoykasse>
     <tr-footer></tr-footer>
   </body>
 </html>
