--- a/teknologi/index.html
+++ b/teknologi/index.html
@@ -14,7 +14,7 @@
     />
 
     <link href="/css/common.css" rel="stylesheet" />
-    <link href="/css/subpage.css" rel="stylesheet" />
+    <link href="/css/verktoykasse.css" rel="stylesheet" />
     <link href="/css/retning.css" rel="stylesheet" />
     <script type="module" src="/components/common.js"></script>
     <script type="module" src="/components/header.js"></script>
@@ -458,7 +458,12 @@
         </tr-prinsipper>
       </main>
     </tr-fill-content>
-    <tr-verktoykasse></tr-verktoykasse>
+    <tr-verktoykasse>
+      <tr-verktoykasse-content>
+        <tr-verktoykasse-header></tr-verktoykasse-header>
+        <tr-verktoykasse-body></tr-verktoykasse-body>
+      </tr-verktoykasse-content>
+    </tr-verktoykasse>
     <tr-footer></tr-footer>
   </body>
 </html>
