fix: mindre overskrift for brukeropplevelse

--- a/brukeropplevelse/index.html
+++ b/brukeropplevelse/index.html
@@ -24,7 +24,7 @@
 
     <style>
       @container main (min-width: 800px) {
-        tr-retning-header2 h1 {
+        tr-retning-header h1 {
           font-size: 1.8em;
         }
       }
