fix(team): flyttet prinsipper oversikter til høyre kolonne

--- a/team/index.html
+++ b/team/index.html
@@ -64,9 +64,9 @@
                   src="/images/organisasjon.svg"
                   alt="Tre personer omringet av en sirkel"
                 />
-                <h3>Vi jobber tverrfaglig</h3>
               </tr-prinsipp-bilde>
               <tr-prinsipp-innhold>
+                <h3 style="margin-bottom: 1rem">Vi jobber tverrfaglig</h3>
                 <p style="margin-bottom: 1rem">
                   Vi vet hva som skal til for at alle kan dele meninger, ideer
                   og tanker uten frykt for å uten frykt for negative
@@ -96,9 +96,9 @@
             <tr-prinsipp>
               <tr-prinsipp-bilde>
                 <img src="/images/analyse_mikroskop.svg" alt="Mikroskop" />
-                <h3>Vi lærer og eksperimenterer</h3>
               </tr-prinsipp-bilde>
               <tr-prinsipp-innhold>
+                <h3 style="margin-bottom: 1rem">Vi lærer og eksperimenterer</h3>
                 <p style="margin-bottom: 1rem">
                   Vi vet hva som skal til for at alle kan dele meninger, ideer
                   og tanker uten frykt for å uten frykt for negative
@@ -131,9 +131,9 @@
                   src="/images/organisasjon.svg"
                   alt="Tre personer omringet av en sirkel"
                 />
-                <h3>Vi jobber tverrfaglig</h3>
               </tr-prinsipp-bilde>
               <tr-prinsipp-innhold>
+                <h3 style="margin-bottom: 1rem">Vi jobber tverrfaglig</h3>
                 <p style="margin-bottom: 1rem">
                   Vi vet hva som skal til for at alle kan dele meninger, ideer
                   og tanker uten frykt for å uten frykt for negative
@@ -166,9 +166,9 @@
                   src="/images/organisasjon.svg"
                   alt="Tre personer omringet av en sirkel"
                 />
-                <h3>Vi jobber tverrfaglig</h3>
               </tr-prinsipp-bilde>
               <tr-prinsipp-innhold>
+                <h3>Vi jobber tverrfaglig</h3>
                 <p style="margin-bottom: 1rem">
                   Vi vet hva som skal til for at alle kan dele meninger, ideer
                   og tanker uten frykt for å uten frykt for negative
@@ -201,9 +201,9 @@
                   src="/images/organisasjon.svg"
                   alt="Tre personer omringet av en sirkel"
                 />
-                <h3>Vi jobber tverrfaglig</h3>
               </tr-prinsipp-bilde>
               <tr-prinsipp-innhold>
+                <h3 style="margin-bottom: 1rem">Vi jobber tverrfaglig</h3>
                 <p style="margin-bottom: 1rem">
                   Vi vet hva som skal til for at alle kan dele meninger, ideer
                   og tanker uten frykt for å uten frykt for negative
@@ -236,9 +236,9 @@
                   src="/images/organisasjon.svg"
                   alt="Tre personer omringet av en sirkel"
                 />
-                <h3>Vi jobber tverrfaglig</h3>
               </tr-prinsipp-bilde>
               <tr-prinsipp-innhold>
+                <h3 style="margin-bottom: 1rem">Vi jobber tverrfaglig</h3>
                 <p style="margin-bottom: 1rem">
                   Vi vet hva som skal til for at alle kan dele meninger, ideer
                   og tanker uten frykt for å uten frykt for negative
