fix: topp-header illustrasjoner for retninger

--- a/brukeropplevelse/index.html
+++ b/brukeropplevelse/index.html
@@ -67,7 +67,12 @@
               </p>
             </div>
           </tr-retning-header-content>
-          <tr-retning-header-image></tr-retning-header-image>
+          <tr-retning-header-image>
+            <img
+              src="/images/Illustrasjon-UX.svg"
+              alt="Politimann gjennomfører avhør med en mann. Begge trykker på en mobiltelefon"
+            />
+          </tr-retning-header-image>
         </tr-retning-header>
         <tr-prinsipper>
           <h2>Prinsipper vi følger</h2>
