--- a/folk/index.html
+++ b/folk/index.html
@@ -41,7 +41,12 @@
               vi godt i endringene - sammen.
             </p>
           </tr-retning-header-content>
-          <tr-retning-header-image></tr-retning-header-image>
+          <tr-retning-header-image>
+            <img
+              src="/images/Illustrasjon-folk.svg"
+              alt="Mann og dame ser på et nettbrett. Mannen holder nettbrettet og damen holder en kaffekopp."
+            />
+          </tr-retning-header-image>
         </tr-retning-header>
         <tr-prinsipper>
           <h2>Prinsipper vi følger</h2>
