--- a/team/index.html
+++ b/team/index.html
@@ -53,7 +53,12 @@
               </ul>
             </div>
           </tr-retning-header-content>
-          <tr-retning-header-image></tr-retning-header-image>
+          <tr-retning-header-image>
+            <img
+              src="/images/Illustrasjon-team.svg"
+              alt="En dame fremviser en presentasjon. En mann med en mobiltelefon og en dame med kaffekopp ser på."
+            />
+          </tr-retning-header-image>
         </tr-retning-header>
         <tr-prinsipper>
           <h2>Prinsipper vi følger</h2>
