--- a/teknologi/index.html
+++ b/teknologi/index.html
@@ -36,7 +36,12 @@
               styrke politiets løsning av samfunnsoppdraget.
             </p>
           </tr-retning-header-content>
-          <tr-retning-header-image></tr-retning-header-image>
+          <tr-retning-header-image>
+            <img
+              src="/images/Illustrasjon-tech.svg"
+              alt="Dame sitter og ser på en skjerm."
+            />
+          </tr-retning-header-image>
         </tr-retning-header>
         <tr-prinsipper>
           <h2>Prinsipper vi følger</h2>
