fix(teknologi): header illustrasjonen er litt mindre enn vanlig

--- a/teknologi/index.html
+++ b/teknologi/index.html
@@ -36,10 +36,11 @@
               styrke politiets løsning av samfunnsoppdraget.
             </p>
           </tr-retning-header-content>
-          <tr-retning-header-image>
+          <tr-retning-header-image data-no-flex="true">
             <img
               src="/images/Illustrasjon-tech.svg"
               alt="Dame sitter og ser på en skjerm."
+              style="width: 25rem"
             />
           </tr-retning-header-image>
         </tr-retning-header>
