fix(retning): topp illustrasjonsbilde for brukeropplevelse og team er høyrestilt og ved siden av teksten istedenfor overskriften. Teksten wrapper rundt bildet. På mobil så vises illustrasjonsbildet under overskriften

--- a/folk/index.html
+++ b/folk/index.html
@@ -29,19 +29,30 @@
         <tr-retning-header>
           <tr-retning-header-content>
             <h1>Retning for Folk</h1>
-            <p>
-              Retning for folk beskriver hvilke forventninger vi har til
-              hverandre, og hvordan hver enkelt bidrar til kulturen vi ønsker
-              oss.
-            </p>
-            <p>
-              Samfunnet er i stadig bevegelse. Det krever at vi tåler å stå i
-              kontinuerlig endring, både i nye metoder og måter for samarbeid.
-              Kulturen vår skal bidra til å bygge robusthet og trygghet. Da står
-              vi godt i endringene - sammen.
-            </p>
+            <div>
+              <tr-retning-header-content-image
+                data-only-mobile="true"
+                data-image-orientation="portrait"
+              >
+                <img
+                  src="/images/Illustrasjon-folk.svg"
+                  alt="Mann og dame ser på et nettbrett. Mannen holder nettbrettet og damen holder en kaffekopp."
+                />
+              </tr-retning-header-content-image>
+              <p style="margin-bottom: 1rem">
+                Retning for folk beskriver hvilke forventninger vi har til
+                hverandre, og hvordan hver enkelt bidrar til kulturen vi ønsker
+                oss.
+              </p>
+              <p>
+                Samfunnet er i stadig bevegelse. Det krever at vi tåler å stå i
+                kontinuerlig endring, både i nye metoder og måter for samarbeid.
+                Kulturen vår skal bidra til å bygge robusthet og trygghet. Da
+                står vi godt i endringene - sammen.
+              </p>
+            </div>
           </tr-retning-header-content>
-          <tr-retning-header-image>
+          <tr-retning-header-image data-only-desktop="true">
             <img
               src="/images/Illustrasjon-folk.svg"
               alt="Mann og dame ser på et nettbrett. Mannen holder nettbrettet og damen holder en kaffekopp."
