--- a/team/index.html
+++ b/team/index.html
@@ -29,12 +29,19 @@
         <tr-retning-header>
           <tr-retning-header-content>
             <h1>Retning for Team</h1>
-            <p>
-              Retning for team består av 6 viktige prinsipper. Alle prinsippene
-              har som utgangspunkt i at personer med ulik kompetanse må
-              samarbeide optimalt for å skape verdi for politiet.
-            </p>
             <div>
+              <tr-retning-header-content-image>
+                <img
+                  src="/images/Illustrasjon-team.svg"
+                  alt="En dame fremviser en presentasjon. En mann med en mobiltelefon og en dame med kaffekopp ser på."
+                />
+              </tr-retning-header-content-image>
+              <p style="margin-bottom: 2rem">
+                Retning for team består av 6 viktige prinsipper. Alle
+                prinsippene har som utgangspunkt i at personer med ulik
+                kompetanse må samarbeide optimalt for å skape verdi for
+                politiet.
+              </p>
               <h2
                 style="margin-bottom: 1rem; font-size: 1.1rem; font-weight: 500"
               >
@@ -53,12 +60,6 @@
               </ul>
             </div>
           </tr-retning-header-content>
-          <tr-retning-header-image>
-            <img
-              src="/images/Illustrasjon-team.svg"
-              alt="En dame fremviser en presentasjon. En mann med en mobiltelefon og en dame med kaffekopp ser på."
-            />
-          </tr-retning-header-image>
         </tr-retning-header>
         <tr-prinsipper>
           <h2>Prinsipper vi følger</h2>
