--- a/teknologi/index.html
+++ b/teknologi/index.html
@@ -29,14 +29,25 @@
         <tr-retning-header>
           <tr-retning-header-content>
             <h1>Retning for Teknologi</h1>
-            <p>
-              PIT skal utvikle fremtidsrettede IT-tjenester i samarbeid med
-              brukerne. PIT skal ta et helhetlig ansvar for utvikling og
-              strategisk styring av teknologiutviklingen i politietaten for å
-              styrke politiets løsning av samfunnsoppdraget.
-            </p>
+            <div>
+              <tr-retning-header-content-image
+                data-only-mobile="true"
+                data-image-orientation="portrait"
+              >
+                <img
+                  src="/images/Illustrasjon-tech.svg"
+                  alt="Dame sitter og ser på en skjerm."
+                />
+              </tr-retning-header-content-image>
+              <p>
+                PIT skal utvikle fremtidsrettede IT-tjenester i samarbeid med
+                brukerne. PIT skal ta et helhetlig ansvar for utvikling og
+                strategisk styring av teknologiutviklingen i politietaten for å
+                styrke politiets løsning av samfunnsoppdraget.
+              </p>
+            </div>
           </tr-retning-header-content>
-          <tr-retning-header-image data-no-flex="true">
+          <tr-retning-header-image data-no-grow="true" data-only-desktop="true">
             <img
               src="/images/Illustrasjon-tech.svg"
               alt="Dame sitter og ser på en skjerm."
