fix(team): samme underoverskrift i team som brukeropplevelse

--- a/team/index.html
+++ b/team/index.html
@@ -42,9 +42,7 @@
                 kompetanse må samarbeide optimalt for å skape verdi for
                 politiet.
               </p>
-              <h2
-                style="margin-bottom: 1rem; font-size: 1.1rem; font-weight: 500"
-              >
+              <h2 style="font-size: 1.4rem; margin-bottom: 0.25rem">
                 Retning for Team treffer på PITs ambisjon:
               </h2>
               <ul>
