refactor: font størrelse for underoverskrift (h2) flyttet til css fil

--- a/brukeropplevelse/index.html
+++ b/brukeropplevelse/index.html
@@ -36,7 +36,7 @@
                   alt="Politimann gjennomfører avhør med en mann. Begge trykker på en mobiltelefon"
                 />
               </tr-retning-header-content-image>
-              <h2 style="font-size: 1.4rem; margin-bottom: 0.25rem">Hva</h2>
+              <h2 style="margin-bottom: 0.25rem">Hva</h2>
               <p style="margin-bottom: 1rem">
                 Retning for brukeropplevelse skal beskrive opplevelsen vi vil
                 jobbe for å levere - og opplevelsen vi ønsker å love alle
@@ -49,7 +49,7 @@
               </p>
             </div>
             <div>
-              <h2 style="font-size: 1.4rem; margin-bottom: 0.25rem">
+              <h2 style="margin-bottom: 0.25rem">
                 Hvorfor Politiets samfunnsoppdrag
               </h2>
               <p style="margin-bottom: 1rem">
